[project]
name = "reporter_agent_crewai"
version = "0.1.0"
description = "Reporter-agent-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
reporter_agent_crewai = "reporter_agent_crewai.main:run"
run_crew = "reporter_agent_crewai.main:run"
train = "reporter_agent_crewai.main:train"
replay = "reporter_agent_crewai.main:replay"
test = "reporter_agent_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
